| 2025-06-29 | 0008 | root | v1.0.2 | mod | updated README.md. | | ALPHA | ;;; | 2025-06-29 | 0007 | root | v1.0.1 | mod | added github repo link as shield badge to page. | | ALPHA | ;;;

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ PURPOSE = Main index page for the cursorrules project, serving as the GitHub Pag
       <p>
         <a href="https://github.com/rx-inference/rx-cursorrules/blob/main/LICENSE"><img src="https://img.shields.io/badge/License-Apache_2.0-blue.svg" alt="License"></a>
         <a href="#"><img src="https://img.shields.io/badge/Version-v1.0.0-brightgreen" alt="Version"></a>
+        <a href="https://github.com/robinrx/cursorrules"><img src="https://img.shields.io/badge/GitHub-Repository-blue?logo=github" alt="GitHub Repository"></a>
       </p>
       <p>
         <b>A Growing Collection of Rules for Cursor AI or any other AI Code Editor.</b>
